fix z-index bug

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,7 +44,7 @@
     font-size: 18px;
     font-family: Verdana;
     text-align: center;
-    z-index: 9999999999999999999999;
+    z-index: 999999;
 }
 
 #frontendEditor-nav #openBTN {
